--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -1,11 +1,8 @@
 @charset "utf-8";
 @import "common";
+@import "element";
 
 
-.fix {
-    position: fixed;
-    top: 0px;
-}
 #homepage-banner {
     width: 100%;
     
@@ -32,6 +29,7 @@
         }
     }
 }
+
 #menu {
     width: 100%;
     border-radius: 0px;
@@ -73,6 +71,7 @@
         }
     }
 }
+
 .title {
     margin-top: 40px;
     position: relative;
@@ -96,50 +95,7 @@
         font-size: 2em;
         font-weight: bolder;
     }
-    .band {
-        height: 0;
-        width: 50px;
-        position: absolute;
-        top: 25px;
-    }
-    .red {
-        color: $red;
-    }
-    .red.band {
-        border: 3px solid $red;
-    }
-    .purple {
-        color: $purple;
-    }
-    .purple.band {
-        border: 3px solid $purple;
-    }
-    .yellow {
-        color: $yellow;
-    }
-    .yellow.band {
-        border: 3px solid $yellow;
-    }
-    .blue {
-        color: $blue;
-    }
-    .blue.band {
-        border: 3px solid $blue;
-    }
-    .green {
-        color: $green;
-    }
-    .green.band {
-        border: 3px solid $green;
-    }
-    .band.left {
-        left: 50%;
-        margin-left: -130px;
-    }
-    .band.right {
-        right: 50%;
-        margin-right: -130px;
-    }
+    
     p {
         position: absolute;
         width: 100%;
@@ -148,35 +104,18 @@
         letter-spacing: 4px;
     }
 }
+
 .page {
    overflow: hidden;
 }
-.banner {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 100%;
-    }
-    border-bottom: 1px solid white;
+span.big {
+    font-size: 3em;
+} 
+.indent {
+    padding-left: 5em;
 }
-.banner.yingshi {
-    background: url(./../img/banner/bg_yingshi.png) repeat left top;
-}
-.banner.hongjiu {
-    background: url(./../img/banner/bg_hongjiu.png) repeat left top;
-}
-.banner.mote {
-    background: url(./../img/banner/bg_mote.png) repeat left top;
-}
-.banner.yangsheng {
-    background: url(./../img/banner/bg_yangsheng.png) repeat left top;
-}
-.banner.chenxiang {
-    background: url(./../img/banner/bg_chenxiang.png) repeat left top;
+.indent2 {
+    padding-left: 10em;
 }
 .text-block {
     max-width: 100%;
@@ -206,71 +145,52 @@
         max-width: 100%;
     }
 }
-footer .text-block {
-    padding-top: 150px;
-    padding-bottom: 50px;
+@media (max-width:720px) {
+.text-block {
+    padding: 0;
+    min-height: 600px;
+    color: white;
+    .img-frame {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
     p {
-        width: 800px;
+        max-width: 100%;
+    }
+    img {
+        float: left;
         margin-left: auto;
         margin-right: auto;
-        color: #666666;
-        padding-left: 20%;
+        max-width: 100%;
     }
-    font-size: 1.2em;
 }
-@media (max-width:720px) {
-    .banner {
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 100%;
-        }
-        border-bottom: 1px solid white;
+}
+i {
+    margin-right: 0.5em;
+}
+footer {
+    width: 400px;
+    min-height: 500px;
+    
+    padding-bottom: 2em;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+
+    h4 {
+        margin-top: 2em;
+        font-weight: bold;
     }
-    .text-block {
-        padding: 0;
-        min-height: 600px;
-        color: white;
-        .img-frame {
-            max-width: 100%;
-            margin-bottom: 20px;
-        }
-        p {
-            max-width: 100%;
-        }
-        img {
-            float: left;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 100%;
-        }
+    p {
+        color: #666666;
+        padding: 1em 10%;
     }
-    footer .text-block {
-        padding-top: 50px;
-        padding-bottom: 0;
-        p {
-            padding: 0px;
-            color: #666666;
-        }
-        min-height: 500px;
-        padding-left: 20%;
-        font-size: 1em;
+    li {
+        margin-left: 2em;
+        line-height: 2em;
     }
 }
 
-.yangsheng {
-    background: url(./../img/tile/yangsheng.png) repeat left top;
-}
-.yingshi {
-    background: url(./../img/tile/yingshi.png) repeat left top;
-}
-.hongjiu {
-    background: url(./../img/tile/hongjiu.png) repeat left top;
-}
-.chenxiang {
-    background: url(./../img/tile/chenxiang.png) repeat left top;
-}
-.mote {
-    background: url(./../img/tile/mote.png) repeat left top;
+.contact {
+    text-align: center;
 }
