--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -42,10 +42,11 @@
             <img src="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
             <img src="{% static 'main/img/module/yingshi2.jpg'%}" alt="">
         </div>
-        <p>2014年上海电影节获奖投资</p>
+        <p>2014年上海电影节<span class="big">获奖投资</span></p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
-        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
-        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>著名韩国导演，中国新生代制片人的加盟，进一步促进我公司影业的未来发展。</p>
+        <p>众多男模、女模的签约更使锦上添花。</p>
+        <p>2014年上海电影节我公司推出《青春》剧荣获<span class="big">最佳美术奖、最具潜力奖</span>。</p>
         <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
@@ -64,11 +65,11 @@
             <img src="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
             <img src="{% static 'main/img/module/hongjiu2.jpg'%}" alt="">
         </div>
-        <p>2014年上海电影节获奖投资</p>
-        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
-        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
-        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
-        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
+        <p><span class="big">红酒</span>充满<span class="big">贵族</span>的气息</p>
+        <p>赋予<span class="big">浪漫</span>的情调</p>
+        <p>高档红酒有不菲的收藏价值</p>
+        <p>而顶级红酒的储存莫过于<span class="big">专业酒窖</span></p>
+        <p>我公司彰显酒的文化和价值，储藏多款来自法国、意大利、澳洲、智利等国家的佳酿，收藏了近万支名贵的葡萄酒。</p>
     </div>
 </div>
 <div class="page" id="yangsheng">
@@ -86,11 +87,10 @@
             <img src="{% static 'main/img/module/chadao1.jpg'%}" alt="">
             <img src="{% static 'main/img/module/chadao2.jpg'%}" alt="">
         </div>
-        <p>2014年上海电影节获奖投资</p>
-        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
-        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
-        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
-        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
+        <p>唐泊府内部所奉之茶，以高端三品为养之道——<span class="big">品茶、品香、品足</span>。</p>
+        <p>茶来源于集团旗下福建省武夷山私属茶山。</p>
+        <p>会馆醇享中国茶的理念，坚守自然生态健康的原则。</p>
+        <p>茶味滴滴浓香，意郁未尽，令人平心静气，走入<span class="big">禅</span>境，以茶修身养生，从而最终达到<span class="big">真、清、静</span>的精神境界。</p>
     </div>
 </div>
 <div class="page" id="chenxiang">
@@ -108,11 +108,10 @@
             <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
             <img src="{% static 'main/img/module/chenxiang2.jpg'%}" alt="">
         </div>
-        <p>2014年上海电影节获奖投资</p>
-        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
-        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
-        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
-        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
+        <p><span class="big">沉香</span>香品高雅，而且十分难得，自古以来即被列为<span class="big">众香之首</span>。 </p>
+        <p>《本草纲目》记：“其积年老木，长年其外皮俱朽，木心与枝节不坏，坚黑沉水者，即沉香也”。</p>
+        <p>一般只有数十年以上的香树才可能形成沉香，而且从结香到成熟又需要很多年，所以上品天然沉香为无价之宝。</p>
+        <p>沉香生则色如墨、熟则重如金，奇楠坚如金、润如玉、香如蜜。</p>
     </div>
 </div>
 <div class="page" id="mote">
@@ -130,11 +129,10 @@
             <img src="{% static 'main/img/module/mote1.jpg'%}" alt="">
             <img src="{% static 'main/img/module/mote2.jpg'%}" alt="">
         </div>
-        <p>2014年上海电影节获奖投资</p>
-        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
-        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
-        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
-        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
+        <p><span class="big">她</span>，露凝玉腿，弥漫着淡淡的诱惑。</p>
+        <p><span class="big indent">她</span>，手法奇巧富灵性，技艺精湛纯熟。</p>
+        <p><span class="big indent2">她</span>，为您带来身心愉悦和美妙放松的感受。</p> 
+        <p><span class="big indent">她</span>，浓郁充盈的古典气质体现出我们最终极的御制养生古法。</p>
     </div>
 </div>
 {% include 'main/_footer.html' %} 
