--- a/main/static/main/scss/_common.scss
+++ b/main/static/main/scss/_common.scss
@@ -17,7 +17,9 @@ a {
     list-style-type: none;
     text-decoration: none;
 }
-
+h4 {
+    text-align: center;
+}
 $red: #C1272D;
 $blue: rgb(34,62,113);
 $purple: rgb(75,16,64);
@@ -31,4 +33,8 @@ $green: rgb(108,108,75);
 .centered {
     margin-left: auto;
     margin-right: auto;
+}
+.fix {
+    position: fixed;
+    top: 0px;
 }
