--- a/main/templates/main/_base.html
+++ b/main/templates/main/_base.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width:device-width,initial-scale=1.0,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>tangbofu</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/bootstrap-v4/css/bootstrap.min.css' %}"></link>
+    <link rel="stylesheet" href="{% static 'main/bootstrap-v4/css/bootstrap.min.css' %}"></link>
     <link rel="stylesheet" href="{% static 'main/font-awesome/css/font-awesome.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/main.css' %}"></link>
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}"></link>
+    <link rel="stylesheet" href="{% static 'main/font-awesome/css/font-awesome.min.css'%}">
     {% block css %} {% endblock %}
 </head>
 <body data-spy="scroll" data-target="#menu">
