--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -108,6 +108,8 @@
 .page {
    overflow: hidden;
 }
+
+@media (min-width:721px) {
 span.big {
     font-size: 3em;
 } 
@@ -117,6 +119,8 @@ span.big {
 .indent2 {
     padding-left: 10em;
 }
+}
+
 .text-block {
     max-width: 100%;
     margin-left: auto;
@@ -190,7 +194,11 @@ footer {
         line-height: 2em;
     }
 }
-
+@media (max-width:720px) {
+footer {
+    width: 100%;
+}
+}
 .contact {
     text-align: center;
 }
