--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -111,8 +111,7 @@ h4 {
 .banner {
   max-width: 100%;
   margin-left: auto;
-  margin-right: auto;
-  border-bottom: 1px solid white; }
+  margin-right: auto; }
   .banner img {
     display: block;
     margin-left: auto;
