--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -278,7 +278,7 @@ h4 {
       float: left;
       margin-left: auto;
       margin-right: auto;
-      max-width: 100%; } }
+      width: 100%; } }
 i {
   margin-right: 0.5em; }
 
