--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -165,7 +165,7 @@ span.big {
         float: left;
         margin-left: auto;
         margin-right: auto;
-        max-width: 100%;
+        width: 100%;
     }
 }
 }
