字体调整大小。

--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -111,7 +111,7 @@
 
 @media (min-width:721px) {
 span.big {
-    font-size: 3em;
+    font-size: 2em;
 } 
 .indent {
     padding-left: 5em;
@@ -141,6 +141,7 @@ span.big {
         margin-right: auto;
         padding: 15px;
         color: white;
+        font-size: 18px;
     }
     img {
         float: left;
