make the pictures smaller

--- a/main/static/main/scss/_element.scss
+++ b/main/static/main/scss/_element.scss
@@ -56,19 +56,19 @@
     }
 }
 .banner.yingshi {
-    background: url(./../img/banner/bg_yingshi.png) repeat left top;
+    background: url(./../img/banner/bg_yingshi.jpg) repeat left top;
 }
 .banner.hongjiu {
-    background: url(./../img/banner/bg_hongjiu.png) repeat left top;
+    background: url(./../img/banner/bg_hongjiu.jpg) repeat left top;
 }
 .banner.mote {
-    background: url(./../img/banner/bg_mote.png) repeat left top;
+    background: url(./../img/banner/bg_mote.jpg) repeat left top;
 }
 .banner.yangsheng {
-    background: url(./../img/banner/bg_yangsheng.png) repeat left top;
+    background: url(./../img/banner/bg_yangsheng.jpg) repeat left top;
 }
 .banner.chenxiang {
-    background: url(./../img/banner/bg_chenxiang.png) repeat left top;
+    background: url(./../img/banner/bg_chenxiang.jpg) repeat left top;
 }
 
 .yangsheng {
