--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -34,7 +34,7 @@
         <div class="band right blue"></div>
     </div>
     <div class="banner yingshi">
-        <img src="{% static 'main/img/banner/yingshi.jpg'%}" alt="">
+        <img src="{% static 'main/img/banner/yingshi.JPG'%}" alt="">
     </div>
     <div class="text-block yingshi">
         <div class="img-frame">
@@ -56,7 +56,7 @@
         <div class="band right purple"></div>
     </div>
     <div class="banner hongjiu">
-        <img src="{% static 'main/img/banner/hongjiu.jpg'%}" alt="">
+        <img src="{% static 'main/img/banner/hongjiu.JPG'%}" alt="">
     </div>
     <div class="text-block hongjiu">
         <div class="img-frame">
@@ -77,7 +77,7 @@
         <div class="band right yellow"></div>
     </div>
     <div class="banner yangsheng">
-        <img src="{% static 'main/img/banner/yangsheng.jpg'%}" alt="">
+        <img src="{% static 'main/img/banner/yangsheng.JPG'%}" alt="">
     </div>
     <div class="text-block yangsheng">
         <div class="img-frame">
@@ -97,7 +97,7 @@
         <div class="band right green"></div>
     </div>
     <div class="banner chenxiang">
-        <img src="{% static 'main/img/banner/chenxiang.jpg'%}" alt="">
+        <img src="{% static 'main/img/banner/chenxiang.JPG'%}" alt="">
     </div>
     <div class="text-block chenxiang">
         <div class="img-frame">
@@ -117,7 +117,7 @@
         <div class="band right red"></div>
     </div>
     <div class="banner mote">
-        <img src="{% static 'main/img/banner/mote.jpg'%}" alt="">
+        <img src="{% static 'main/img/banner/mote.JPG'%}" alt="">
     </div>
     <div class="text-block mote">
         <div class="img-frame">
