--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -119,19 +119,19 @@ h4 {
     max-width: 100%; }
 
 .banner.yingshi {
-  background: url(./../img/banner/bg_yingshi.jpg) repeat left top; }
+  background: url(./../img/banner/bg_yingshi.JPG) repeat left top; }
 
 .banner.hongjiu {
-  background: url(./../img/banner/bg_hongjiu.jpg) repeat left top; }
+  background: url(./../img/banner/bg_hongjiu.JPG) repeat left top; }
 
 .banner.mote {
-  background: url(./../img/banner/bg_mote.jpg) repeat left top; }
+  background: url(./../img/banner/bg_mote.JPG) repeat left top; }
 
 .banner.yangsheng {
-  background: url(./../img/banner/bg_yangsheng.jpg) repeat left top; }
+  background: url(./../img/banner/bg_yangsheng.JPG) repeat left top; }
 
 .banner.chenxiang {
-  background: url(./../img/banner/bg_chenxiang.jpg) repeat left top; }
+  background: url(./../img/banner/bg_chenxiang.JPG) repeat left top; }
 
 .yangsheng {
   background: url(./../img/tile/yangsheng.png) repeat left top; }
