--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,8 +9,8 @@
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_03.jpg' %});"></div>
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_04.jpg' %});"></div>
     </div>
-    <img style="bottom: 50px;" src="{% static 'main/img/title.png' %}" alt="">
-    <img style="bottom: 20px;" src="{% static 'main/img/subtitle.png' %}" alt="">
+    <img class="lazy" style="bottom: 50px;" src="{% static 'main/img/title.png' %}" alt="">
+    <img class="lazy" style="bottom: 20px;" src="{% static 'main/img/subtitle.png' %}" alt="">
 </div>
 <nav id="menu" class="navbar navbar-default" role="navigation">
     <ul class="nav nav-pills" role="tablist">
@@ -29,17 +29,17 @@
 </div> -->
 <div class="page" id="yingshi">
     <div class="title">
-        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/tangbofu_title.png'%}" alt="">
         <div class="band left blue"></div>
         <div class="band right blue"></div>
     </div>
     <div class="banner yingshi">
-        <img src="{% static 'main/img/banner/yingshi.JPG'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/banner/yingshi.JPG'%}" alt="">
     </div>
     <div class="text-block yingshi">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
-            <img src="{% static 'main/img/module/yingshi2.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/yingshi2.jpg'%}" alt="">
         </div>
         <p>2014年上海电影节<span class="big">获奖投资</span></p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
@@ -51,17 +51,17 @@
 </div>
 <div class="page" id="hongjiu">
     <div class="title">
-        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/tangbofu_title.png'%}" alt="">
         <div class="band left purple"></div>
         <div class="band right purple"></div>
     </div>
     <div class="banner hongjiu">
-        <img src="{% static 'main/img/banner/hongjiu.JPG'%}" alt="">
+        <img data-original="{% static 'main/img/banner/hongjiu.JPG'%}" alt="">
     </div>
     <div class="text-block hongjiu">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
-            <img src="{% static 'main/img/module/hongjiu2.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/hongjiu2.jpg'%}" alt="">
         </div>
         <p><span class="big">红酒</span>充满<span class="big">贵族</span>的气息</p>
         <p>赋予<span class="big">浪漫</span>的情调</p>
@@ -72,17 +72,17 @@
 </div>
 <div class="page" id="yangsheng">
     <div class="title">
-        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/tangbofu_title.png'%}" alt="">
         <div class="band left yellow"></div>
         <div class="band right yellow"></div>
     </div>
     <div class="banner yangsheng">
-        <img src="{% static 'main/img/banner/yangsheng.JPG'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/banner/yangsheng.JPG'%}" alt="">
     </div>
     <div class="text-block yangsheng">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/chadao1.jpg'%}" alt="">
-            <img src="{% static 'main/img/module/chadao2.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/chadao1.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/chadao2.jpg'%}" alt="">
         </div>
         <p>唐泊府内部所奉之茶，以高端三品为养之道——<span class="big">品茶、品香、品足</span>。</p>
         <p>茶来源于集团旗下福建省武夷山私属茶山。</p>
@@ -92,17 +92,17 @@
 </div>
 <div class="page" id="chenxiang">
     <div class="title">
-        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/tangbofu_title.png'%}" alt="">
         <div class="band left green"></div>
         <div class="band right green"></div>
     </div>
     <div class="banner chenxiang">
-        <img src="{% static 'main/img/banner/chenxiang.JPG'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/banner/chenxiang.JPG'%}" alt="">
     </div>
     <div class="text-block chenxiang">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
-            <img src="{% static 'main/img/module/chenxiang2.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/chenxiang2.jpg'%}" alt="">
         </div>
         <p><span class="big">沉香</span>香品高雅，而且十分难得，自古以来即被列为<span class="big">众香之首</span>。 </p>
         <p>《本草纲目》记：“其积年老木，长年其外皮俱朽，木心与枝节不坏，坚黑沉水者，即沉香也”。</p>
@@ -112,17 +112,17 @@
 </div>
 <div class="page" id="mote">
     <div class="title">
-        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/tangbofu_title.png'%}" alt="">
         <div class="band left red"></div>
         <div class="band right red"></div>
     </div>
     <div class="banner mote">
-        <img src="{% static 'main/img/banner/mote.JPG'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/banner/mote.JPG'%}" alt="">
     </div>
     <div class="text-block mote">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/mote1.jpg'%}" alt="">
-            <img src="{% static 'main/img/module/mote2.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/mote1.jpg'%}" alt="">
+            <img class="lazy" data-original="{% static 'main/img/module/mote2.jpg'%}" alt="">
         </div>
         <p><span class="big">她</span>，露凝玉腿，弥漫着淡淡的诱惑。</p>
         <p><span class="big indent">她</span>，手法奇巧富灵性，技艺精湛纯熟。</p>
@@ -149,6 +149,11 @@ function resize() {
 $(function() {
     resize();
     setInterval(resize, 500);
+ 
+    $("img.lazy").lazyload({ 
+        effect : "fadeIn" 
+    }); 
+
 });
 
 function bodyScroll() {
@@ -160,5 +165,6 @@ function bodyScroll() {
     }
 }
 $(window).scroll(bodyScroll);
+
 </script>
 {% endblock js %}
