--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -56,7 +56,7 @@
         <div class="band right purple"></div>
     </div>
     <div class="banner hongjiu">
-        <img data-original="{% static 'main/img/banner/hongjiu.JPG'%}" alt="">
+        <img class="lazy" data-original="{% static 'main/img/banner/hongjiu.JPG'%}" alt="">
     </div>
     <div class="text-block hongjiu">
         <div class="img-frame">
