增加联系我们，meta

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -19,6 +19,7 @@
         <li class="nav-item"><a class="nav-link" href="#yangsheng">养生</a></li>
         <li class="nav-item"><a class="nav-link" href="#chenxiang">沉香</a></li>
         <li class="nav-item"><a class="nav-link" href="#mote">模特</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">联系</a></li>
     </ul>
 </nav>
 <!-- <div class="title">
@@ -130,6 +131,7 @@
         <p><span class="big indent">她</span>，浓郁充盈的古典气质体现出我们最终极的御制养生古法。</p>
     </div>
 </div>
+
 {% include 'main/_footer.html' %} 
 {% endblock page_content%} 
 
