--- a/main/static/main/css/tangbofu.css
+++ b/main/static/main/css/tangbofu.css
@@ -186,7 +186,7 @@ h4 {
   #menu .nav-pills, #menu .nav-link {
     border-radius: 0; }
   #menu ul li.nav-item {
-    width: 20%;
+    width: 16%;
     line-height: 2em;
     display: inline-block;
     margin: 0;
@@ -196,6 +196,8 @@ h4 {
     -webkit-box-sizing: border-box;
     /* Safari */
     text-align: center; }
+  #menu ul li.nav-item:last-child {
+    width: 20%; }
   #menu .nav-link {
     color: #666666;
     position: relative; }
