--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -40,7 +40,7 @@
         border-radius: 0;
     }
     ul li.nav-item {
-        width: 20%;
+        width: 16%;
         line-height: 2em;
         display: inline-block;
         margin: 0;
@@ -49,7 +49,9 @@
         -webkit-box-sizing:border-box; /* Safari */
         text-align: center;
     }
-    
+    ul li.nav-item:last-child {
+        width: 20%;
+    }
     .nav-link {
         color: #666666;
         position: relative;
