--- a/main/templates/main/_footer.html
+++ b/main/templates/main/_footer.html
@@ -5,7 +5,7 @@
     <div class="band right red"></div>
 </div>
 <footer>
-    <h4 class="red">关于我们</h4>
+    <h4 class="red" id="contact">关于我们</h4>
     <p>唐泊府是一家专门为高端男士打造的养生会所，总公司投资多元化，主要涉及：
     <ol>
         <li><i class="fa fa-check-square-o"></i><i class="fa fa-heart"></i>服务管理</li> 
@@ -15,12 +15,13 @@
     </ol>
     <p>公司在北京、上海、深圳均有高端私人会所。</p>
     <p>所有会所均设有<b class="red">茶道、香道、沉香木藏品展示</b>，诚邀各界名流莅临品鉴。</p>
-    <h4 class="red">联系我们</h4>
+    <h4 class="red" >联系我们</h4>
     <div class="contact">
         <!-- <p>Email: contact@adobe.com</p>
         <p>QQ: 8888888</p>
         <p>电话: 8888888</p> -->
         <p>地址: 北京市朝阳区石佛营</p>
         <!-- <p>微信: xxx</p> -->
+        <div style="height:150px;"></div>
     </div>
 </footer>
