--- a/main/templates/main/_base.html
+++ b/main/templates/main/_base.html
@@ -8,9 +8,12 @@
     <title>唐泊府</title>
     <meta name="description" content="唐泊府是一家专门为高端男士打造的养生会所，总公司投资多元化，主要涉及：服务管理，影视制作，模特经纪，高端表演特制服务，公司在北京、上海、深圳均有高端私人会所。所有会所均设有茶道、香道、沉香木藏品展示，诚邀各界名流莅临品鉴。" >
     <meta name="Keywords" content="高端,男士,服务管理,模特经纪,高端表演特制服务,茶道,香道,沉香木">
-    <!-- <link rel="stylesheet" href="{% static 'main/bootstrap-v4/css/bootstrap.min.css' %}"></link>
+    <!--
+    <link rel="stylesheet" href="{% static 'main/bootstrap-v4/css/bootstrap.min.css' %}"></link>
     <link rel="stylesheet" href="{% static 'main/font-awesome/css/font-awesome.min.css'%}">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}"></link> -->
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}"></link>
+    -->
+    <!---->
     <link rel="stylesheet" href="{% static 'main/css/tangbofu.css' %}"></link>
     {% block css %} {% endblock %}
 </head>
