--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -20,6 +20,7 @@
         <li class="nav-item"><a class="nav-link" href="#chenxiang">沉香</a></li>
         <li class="nav-item"><a class="nav-link" href="#mote">模特</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">联系</a></li>
+        <li class="nav-item"><a class="nav-link" href="/news_list">文章</a></li>
     </ul>
 </nav>
 <!-- <div class="title">
