--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import "common";
 @import "element";
-
+@import "news";
 
 #homepage-banner {
     width: 100%;
@@ -40,7 +40,7 @@
         border-radius: 0;
     }
     ul li.nav-item {
-        width: 16%;
+        width: 14%;
         line-height: 2em;
         display: inline-block;
         margin: 0;
@@ -50,7 +50,7 @@
         text-align: center;
     }
     ul li.nav-item:last-child {
-        width: 20%;
+        width: 16%;
     }
     .nav-link {
         color: #666666;
@@ -172,6 +172,8 @@ span.big {
     }
 }
 }
+
+
 i {
     margin-right: 0.5em;
 }
