--- a/main/templates/main/news_list.html
+++ b/main/templates/main/news_list.html
@@ -41,6 +41,9 @@
                 {% endif %}
 
             </ul>
+
+        </div>
+        <div class="end-area">
             <div id="page-list">
                 {% if page.has_previous %}
                     <a href="/news_list/{{ page.previous_page_number }}/"><span>上一页</span></a>
