--- a/main/static/main/scss/_news.scss
+++ b/main/static/main/scss/_news.scss
@@ -7,6 +7,12 @@
   position: relative;
   height: 100%;
 }
+.end-area {
+  width: 600px;
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+}
 .notice {
   color:#666;
   text-align: center;
