--- a/main/templates/main/_footer.html
+++ b/main/templates/main/_footer.html
@@ -22,6 +22,11 @@
         <p>电话: 8888888</p> -->
         <p>地址: 北京市朝阳区石佛营</p>
         <!-- <p>微信: xxx</p> -->
-        <div style="height:150px;"></div>
+
     </div>
+    <p style="font-size: 14px; color:#999999; padding: 0; text-align: center;">
+        唐泊府 2016 © tbfman.com All Rights Reserved <br>
+        <a style="color:#999999; text-align: center;" href="http://www.miitbeian.gov.cn/">京ICP备16001739号</a>
+    </p>
+    <div style="height:150px;"></div>
 </footer>
